--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         
         <a href="https://www.linkedin.com/in/zandile-madlala-8005a4230/" target="_blank"><i class="fa-brands fa-linkedin" style="color: rgb(31, 31, 240);font-size: 100px;"></i></a>
         <a href="https://github.com/ChemicalE" target="_blank"><i class="fa-brands fa-github" style="font-size: 100px; color: black;"></i></a>
-        <a href="mailto:zandilepellegrinm@gmail.com" style="font-size: 10px;"><i class="fa-solid fa-envelope" style="font-size: 100px;"></i></a>
+        <a href="mailto:zandilepellegrinm@gmail.com" target="_blank" style="font-size: 10px;"><i class="fa-solid fa-envelope" style="font-size: 100px;"></i></a>
         <a href="https://www.facebook.com/zandileamoh.madlala?mibextid=ZbWKwL" target="_blank"><i class="fa-brands fa-facebook" style="color: rgb(32, 32, 199); font-size: 100px;"></i></a>
         <a href="https://www.tiktok.com/@zandile_madlala" target="_blank"><i class="fa-brands fa-tiktok" style="color: black; font-size: 100px;"></i></a>
         
